@@ -1,3 +1,7 @@
+2007-06-14  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/app/helpers/application_helper.rb (ApplicationHelper::don_get_theme): Small fix.
+
 2007-06-09  Akira TAGOH  <at@gclab.org>
 
 	* donrails/tool/pingger/pingger.rb: Load environment.rb instead of
